# MyTFTEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/assets/shaders/: default.frag  default.vert
engine/include/: Buffer.h  Engine.h  Renderer.h  Shader.h  VertexArray.h
engine/src/: Buffer.cpp  Engine.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp
game/: CMakeLists.txt
game/src/: Main.cpp
